# crud01

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile
