[tool.poetry]
name = "crud01"
version = "0.1.0"
description = ""
authors = ["Jonatan Gomez <andresgomez1796@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
